--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <body>
         Test
         <ol>
-            <li><a href="my_class_stream">my_class_stream (basic html)</a></li>
+            <li><a href="my_class_stream/basic_webpage.html">my_class_stream (basic html)</a></li>
             <li><a href="favorite_things">favorite_things (hw1, basic html)</a></li>
         </ol>
     </body>
