--- a/multipage_website/index.html
+++ b/multipage_website/index.html
@@ -4,12 +4,65 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nehmat | Multipage Website</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
+
+<style>
+body{
+    background-color: rgb(201, 231, 227);
+    font-family: Georgia, 'Times New Roman', Times, serif,;
+
+}
+
+.container {
+    width: 1080px;
+    border: 4px solid purple;
+    margin: 0 auto;
+    padding: 30px;
+    background-color: white;
+    border-radius: 25px
+}
+</style>
+
 <body>
-    <ul>
-        <li><a href="index.html">Go to Home page</a></li>
-        <li><a href="picture_page.html">Go to the Picture Page</a></li>
-        <li><a href="final_info.html">Go to the final page</a></li>
-    </ul>
+    <div class="container">
+        <ul class="nav">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="gallery.html">Gallery</a></li>
+            <li><a href="resource.html">Resources</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
+
+        <h1 style="text-align:center">All Things Volleyball</h1>
+        <h2 style="text-align:center">My Genius: Volleyball; Rules of the Game</h2>
+
+    
+    </div>
+
+    <h4 style="text-align: center">Hi there! And welcome to my website about...you guessed it! All Things Volleyball! However, I don't want you to get the wrong idea, I'm not going to teach you how to play volleyball, though I will have some resources for you on the "Resources" on that if you are interested in playing. The brunt of this website will be giving you some knowledge on the different rules and types of the game that there are. I hope you enjoy the journey through this website with me! Vamos!</h4>
+
+    <br>
+    <p class="para-text">.</p>
+    <p class="para-text">.</p>
+    <p class="para-text">.</p>
+    <br>
+
+    <h4 style="text-align:center; font-size:25px">Let's start with the 3 most common ways people play volleyball. </h4>
+
+    <p class="para-text">1. Indoor Volleyball</p>
+
+    <img src="images/uw-indoor-vball-pic.jpg" width="500px" class="wrap">
+
+    <p>Indoor volleyball is the most common version of volleyball and the kind that people think of when they hear the word. Indoor volleyball is played in a gym, with a court that is 30 feet long, with six players on the court at one time. 
+        Pros: More people on the court, feet free to move without anything holding them back, not affected by weather or sunlight, AC indoors, softer 
+
+        Cons: Less touches, loud arena
+    </p>
+
+
+
+
+
 </body>
+
 </html>
