--- a/multipage_website/resource.html
+++ b/multipage_website/resource.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nehmat | Multipage Website</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <ul>
         <li><a href="index.html">Go to Home page</a></li>
-        <li><a href="picture_page.html">Go to the Picture Page</a></li>
-        <li><a href="final_info.html">Go to the final page</a></li>
+        <li><a href="gallery.html">Go to the Gallery Page</a></li>
+        <li><a href="resource.html">Go to the Resources page</a></li>
+        <li><a href="contact.html">Go to the Contact Page</a></li>
     </ul>
 </body>
 </html>
