chugging along on the website

--- a/multipage_website/index.html
+++ b/multipage_website/index.html
@@ -14,14 +14,7 @@ body{
 
 }
 
-.container {
-    width: 1080px;
-    border: 4px solid purple;
-    margin: 0 auto;
-    padding: 30px;
-    background-color: white;
-    border-radius: 25px
-}
+
 </style>
 
 <body>
@@ -47,19 +40,34 @@ body{
     <p class="para-text">.</p>
     <br>
 
-    <h4 style="text-align:center; font-size:25px">Let's start with the 3 most common ways people play volleyball. </h4>
+    <h4 style="text-align:center; font-size:25px">Let's start with the 2 most common ways people play volleyball. </h4>
 
     <p class="para-text">1. Indoor Volleyball</p>
 
-    <img src="images/uw-indoor-vball-pic.jpg" width="500px" class="wrap">
+    <img src="images/uw-indoor-vball-pic.jpg" width="350px" class="wrap">
 
     <p>Indoor volleyball is the most common version of volleyball and the kind that people think of when they hear the word. Indoor volleyball is played in a gym, with a court that is 30 feet long, with six players on the court at one time. 
-        Pros: More people on the court, feet free to move without anything holding them back, not affected by weather or sunlight, AC indoors, softer 
-
-        Cons: Less touches, loud arena
+        <br>
+        <br>
+        Pros: More people on the court, feet free to move without anything holding them back, not affected by weather or sunlight, AC indoors, 
+        <br>
+        <br>
+        Cons: Less touches, loud arena, hard gym floor (diving), bigger court
     </p>
 
+    <p class="para-text">2. Beach Volleyball</p>
 
+    <img src="images/beach-volleyball-for-beginners.jpg" width="350px" class="wrap">
+
+    <p>Beach volleyball is the second most common version of volleyball that is played. Beach volleyball is played outside on the beach (obvi) and is played with two players on the court at all times. The court is about 26 ft long.
+
+        <br>
+        <br>
+        Pros: Sand is soft to land on, more touches because less people, 
+        <br>
+        <br>
+        Cons: affected by weather (cold or hot), looking into sun is hard, sand holds you down so you can't move as fast or jump as high, have to be good at every skill, wind
+    </p>
 
 
 
