--- a/multipage_website/resource.html
+++ b/multipage_website/resource.html
@@ -6,12 +6,114 @@
     <title>Nehmat | Multipage Website</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
+
+<style>
+    body{
+    background-color: rgb(201, 231, 227);
+    font-family: Georgia, 'Times New Roman', Times, serif,;
+
+}
+
+    .title {
+        text-align: center;
+    }
+
+    tr:nth-child(even) {
+  background-color: #ddc5e0;
+}
+
+tr:nth-child(odd) {
+  background-color: #e8c0cb;
+}
+
+
+</style>
+
 <body>
-    <ul>
-        <li><a href="index.html">Go to Home page</a></li>
-        <li><a href="gallery.html">Go to the Gallery Page</a></li>
-        <li><a href="resource.html">Go to the Resources page</a></li>
-        <li><a href="contact.html">Go to the Contact Page</a></li>
+    <div class="container">
+    <ul class="nav">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="gallery.html">Gallery</a></li>
+        <li><a href="resource.html">Resources</a></li>
+        <li><a href="contact.html">Contact</a></li>
     </ul>
+
+    <h1 class="title">Resources</h1>
+
+    <h4 style="text-align: center">Welcome to the resources page! On this page, I will compile a lot of different links and videos that you can use to further your research of volleyball and so you can look into playing and not just the rules of the game. I will put a little caption on each resource so that you know a little bit about it. </h4>
+    </div>
+
+    <div class="title-container">
+        <h2 style="text-align: center">Playing Volleyball</h2>
+    </div>
+
+    <div style="text-align: center;">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/gOgfoEGUDCA?si=kVvBjQ_I7atxdknk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <br>
+        <p>Here is a basic overview of passing, it will tell you all the fundamentals of passing.</p>
+    </div>
+
+    <div style="text-align: center">
+        <a href="https://www.strength-and-power-for-volleyball.com/volleyball-skills-passing.html" target="_blank" style="color:black;">More Passing Tips: Once you get the stuff from the other video down, try some tips from this website.</a>
+    </div>
+    <br>
+    <br>
+    <div style="text-align: center;">
+        <a href="https://betteratvolleyball.com/how-to-set-a-volleyball-a-beginners-guide/" target="_blank" style="color: black;">Setting: Setting is another fundamental volleyball skill. This website gives you fundamentals and extra theory tips.</a>
+    </div>
+    <br>
+    <br>
+    <div style="text-align: center;">
+        <a href="https://www.strength-and-power-for-volleyball.com/volleyball-skills-attack-hit.html" target="_blank" style="color: black;">Hitting: Hitting is the offensive skill in volleyball. This website will break it down</a>
+    </div>
+    <br>
+    <br>
+    <div style="text-align: center;">
+        <a href="https://www.strength-and-power-for-volleyball.com/how-to-serve-a-volleyball.html" target="_blank" style="color: black;">Serving: Serving is how you start a rally in volleyball. It's a good tool to have a good serve.</a>
+    </div>
+<br>
+<br>
+<div style="text-align: center;">
+    <table>
+        <tr>
+            <th>Skill</th>
+          <th>Beginner Level</th>
+          <th>Intermediate Level</th>
+          <th>Advanced Level</th>
+        </tr>
+        <tr>
+          <td>Serving</td>
+          <td>Underhand Serve</td>
+          <td>Standing Float/Jump Float</td>
+          <td>Spike Serve/Hybrid</td>
+        </tr>
+        <tr>
+          <td>Setting</td>
+          <td>Standing, Off Tosses</td>
+          <td>Standing, Moving Off Passes</td>
+          <td>Jump-Setting and Pivot techniques</td>
+        </tr>
+        <tr>
+            <td>Passing</td>
+            <td>Pass off of Tosses</td>
+            <td>Pass off of Serves, Hits, and Rolls</td>
+            <td>Faster Hits and Serves, Diving Techniques</td>
+        </tr>
+        <tr>
+            <td>Hitting</td>
+            <td>Standing Downball</td>
+            <td>Taking an Approach and Jumping</td>
+            <td>Shots and Aim</td>
+        </tr>
+      </table>
+</div>
+
+
+
+    
+
+
+
+
 </body>
 </html>
