committing some work

--- a/multipage_website/gallery.html
+++ b/multipage_website/gallery.html
@@ -6,12 +6,44 @@
     <title>Nehmat | Multipage Website</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
+
+<style>
+body{
+    background-color: rgb(201, 231, 227);
+    font-family: Georgia, 'Times New Roman', Times, serif,;
+
+}
+
+
+</style>
+
 <body>
-    <ul>
-        <li><a href="index.html">Go to Home page</a></li>
-        <li><a href="gallery.html">Go to the Gallery Page</a></li>
-        <li><a href="resource.html">Go to the Resources page</a></li>
-        <li><a href="contact.html">Go to the Contact Page</a></li>
-    </ul>
+    <div class="container">
+        <ul class="nav">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="gallery.html">Gallery</a></li>
+            <li><a href="resource.html">Resources</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
+
+        <h1 style="text-align: center;">Image Gallery</h1>
+
+        <p style="text-align: center;">Here is a page of images of other people playing volleyball. Hopefully it inspires you to start playing. Volleyball can be played almost anywhere, as long as you have a ball. People will play in the water, in the snow, in the dark, anywhere. Let me compile some pictures for you.</p>
+
+    </div> 
+    
+    <h2 style="text-align: center;">Snow Volleyball</h2>
+
+    <img src="images/snow-vball1.jpg" width="350px">
+    <img src="images/snow-vballl-2.jpg" width="350px" float="right">
+    <img src="images/snow-vball-3.jpg" width="350px" float="right">
+
+    <h2 style="text-align: center;">Water Volleyball</h2>
+
+    <img src="images/water-volleyball-1.jpg" width="350px">
+    <img src="images/water-volleyball-2.jpg" width="350px">
+    <img src="images/water-voleyball-3.webp" width="350px">
+
+    <h2
+
 </body>
-</html>
