--- a/multipage_website/index.html
+++ b/multipage_website/index.html
@@ -32,7 +32,7 @@ body{
     
     </div>
 
-    <h4 style="text-align: center">Hi there! And welcome to my website about...you guessed it! All Things Volleyball! However, I don't want you to get the wrong idea, I'm not going to teach you how to play volleyball, though I will have some resources for you on the "Resources" on that if you are interested in playing. The brunt of this website will be giving you some knowledge on the different rules and types of the game that there are. I hope you enjoy the journey through this website with me! Vamos!</h4>
+    <h4 style="text-align: center">Hi there! And welcome to my website about...you guessed it! All Things Volleyball! Throughout this website, I have put a lot of resources for you to learn how to play volleyball and some guidelines for your progress journey! I hope you enjoy the journey through this website with me! Vamos!</h4>
 
     <br>
     <p class="para-text">.</p>
@@ -57,7 +57,7 @@ body{
 
     <p class="para-text">2. Beach Volleyball</p>
 
-    <img src="images/beach-volleyball-for-beginners.jpg" width="350px" class="wrap">
+    <img src="images/beach-volleyball-for-beginners.jpg" width="350px" class="anti-wrap">
 
     <p>Beach volleyball is the second most common version of volleyball that is played. Beach volleyball is played outside on the beach (obvi) and is played with two players on the court at all times. The court is about 26 ft long.
 
