--- a/multipage_website/resource.html
+++ b/multipage_website/resource.html
@@ -73,8 +73,9 @@ tr:nth-child(odd) {
     </div>
 <br>
 <br>
-<div style="text-align: center;">
-    <table>
+<h2 style="text-align:center">Here are some guidelines for progress while playing volleyball</h2>
+
+    <table class="center;">
         <tr>
             <th>Skill</th>
           <th>Beginner Level</th>
@@ -106,7 +107,10 @@ tr:nth-child(odd) {
             <td>Shots and Aim</td>
         </tr>
       </table>
-</div>
+
+<br>
+
+<img src="images/ncaa-vball-pic.jpg" width="350px" style="text-align:center;">
 
 
 
