final push for multipage project

--- a/multipage_website/gallery.html
+++ b/multipage_website/gallery.html
@@ -44,6 +44,10 @@ body{
     <img src="images/water-volleyball-2.jpg" width="350px">
     <img src="images/water-voleyball-3.webp" width="350px">
 
-    <h2
+    <h2 style="text-align: center;">Grass Volleyball</h2>
+
+    <img src="images/grass-volleyball-1.jpg" width="350px">
+    <img src="images/grass-volleyball-2.jpg" width="350px">
+    <img src="images/grass-volleyball-3.png" width="350px">
 
 </body>
