--- a/multipage_website/resource.html
+++ b/multipage_website/resource.html
@@ -75,7 +75,7 @@ tr:nth-child(odd) {
 <br>
 <h2 style="text-align:center">Here are some guidelines for progress while playing volleyball</h2>
 
-    <table class="center;">
+    <table class="center">
         <tr>
             <th>Skill</th>
           <th>Beginner Level</th>
@@ -110,7 +110,10 @@ tr:nth-child(odd) {
 
 <br>
 
-<img src="images/ncaa-vball-pic.jpg" width="350px" style="text-align:center;">
+<div style="text-align: center;">
+    <img src="images/ncaa-vball-pic.jpg" width="350px">
+</div>
+
 
 
 
