--- a/multipage_website/contact.html
+++ b/multipage_website/contact.html
@@ -7,3 +7,36 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 
+<style>
+body{
+    background-color: rgb(201, 231, 227);
+    font-family: Georgia, 'Times New Roman', Times, serif,;
+
+}
+
+
+</style>
+
+<body>
+    <div class="container">
+        <ul class="nav">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="gallery.html">Gallery</a></li>
+            <li><a href="resource.html">Resources</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
+    
+
+    <h1 style="text-align: center">Contact Page</h1>
+
+    <a href="mailto:nbhutani@eastsideprep.org" style="color:black;">Email: nbhutani@eastsideprep.org</a>
+
+    <a href="https://www.eastsideprep.org/" style="color:black;">School Website: Click Here</a>
+
+    <h3 style="text-align:center">Well, unfortunately, this is where our journey ends. I hope you've learned a little bit about volleyball and you are inspired to play. Go play volleyball in the snow, in the water, in the sand, in the grass, anywhere! It's just such a fun sport and I'm glad to have shared it with you all. Until next time!</h3>
+</div>
+<div style="text-align:center">
+    <img src="images/contact-page-image.jpg" width="400px">
+</div>
+
+</body>
