--- a/index.html
+++ b/index.html
@@ -1,4 +1,16 @@
 <!DOCTYPE html>
-<
+<html>
+    <body>
+
+        <ol>
+
+            <li><a href="my_class_stream/basic_webpage.html">my_class_stream (basic html)</a></li>
+
+            <li><a href="favorite_things">favorite_things (hw1, basic html)</a></li>
+
+            <li><a href="multipage_website">multipage_website (my genius: volleyball)</a></li>
+        </ol>
+
+    </body>
 </html>
 
