comitting the index with the fonts matter folder

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
             <li><a href="favorite_things">favorite_things (hw1, basic html)</a></li>
 
             <li><a href="multipage_website">multipage_website (my genius: volleyball)</a></li>
+
+            <li><a href="fonts_matter">fonts matter (adobe fonts)</a></li>
         </ol>
 
     </body>
