--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
             <li><a href="multipage_website">multipage_website (my genius: volleyball)</a></li>
 
-            <li><a href="fonts_matter/fonts.html">fonts matter (adobe fonts)</a></li>
+            <li><a href="fonts_matter">fonts matter (adobe fonts)</a></li>
         </ol>
 
     </body>
