class demo final push

--- a/class_demo/index.html
+++ b/class_demo/index.html
@@ -7,23 +7,25 @@
     <meta name="keywords" content="demo, learning, practice, webdesign">
 </head>
 
-<body>
+<body style="background-color: chocolate;">
     <h1> Fun Test Experience </h1>
     <table>
-        <tr>
+        <tr style="background-color: blue;">
             <th>Text Thingies</th>
             <th>Non-text thingies</th>
         </tr>
         <tr>
-            <td><p>
+            <td style="font-size: larger;"><p style="color:purple">
                 Lorem <strong>ipsum</strong> is placeholder text <b>commonly</b> used in the graphic, print and publishing industries for <i>previewing</i> layouts and visual mockups
-            </p></td>
-            <td>
+            </p>
+            <p style="color: purple"> More elaborate text...</p>
+            </td>
+            <td style="padding-left:15px; padding-top: 40px;">
                 <img src="..\multipage_website\images\ncaa-vball-pic.jpg" width="300px" alt="this is a picture of a volleyball and a court">
             </td>
         </tr>
         <tr>
-            <td>
+            <td style="font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;">
                 <ol>
                     <li><a href="https://www.w3schools.com/">W3 Schools HTML Reference</a></li>
                     <li><a href="https://www.google.com">Google Search</a></li>
