staging changes before hw

--- a/class_demo/index.html
+++ b/class_demo/index.html
@@ -5,6 +5,13 @@
     <title>Fun Test Experience</title>
     <meta name="author" content="NKBhutani">
     <meta name="keywords" content="demo, learning, practice, webdesign">
+
+    <style>
+        table, th, td {
+            border: 1px solid black;
+            border-collapse: collapse;
+        }
+    </style>
 </head>
 
 <body style="background-color: chocolate;">
