--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS-Styling Practice</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="homepage/css/style.css">
 </head>
 <body>
     <div class="container">
@@ -22,7 +22,7 @@
     <p class="center">My name is Nehmat Bhutani and I am a 9th Grade EPS student. I'm Indian American and I have a little brother. I live with my grandparents (on my dad's side) and my aunt, uncle and cousin. I'm 14 years old and I play volleyball. Other than volleyball, some of my hobbies include baking and reading. I'm Sikh and keep my hair long, and I really want a dog.</p>
     <h2 class="center">Me!</h2>
     <div class="center">
-        <img src="images/bio-page-picture.jpg" width="500px">
+        <img src="homepage/images/bio-page-picture.jpg" width="500px">
     </div> 
 
     <h2 class="center">Github Repository</h2>
