trying to debug

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <li><a href="my_class_stream/basic_webpage.html">Basic Webpage (HTML)</a></li>
             <li><a href="favorite_things">My Favorite Things</a></li>
             <li><a href="multipage_website">My Genius: Volleyball</a></li>
-            <li><a href="fonts_matter">Adobe Fonts Practice</a></li>
+            <li><a href="fonts_matter/fonts.html">Adobe Fonts Practice</a></li>
         </ul>
 
         <h1 class="center">Intro</h1>
