--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="my_class_stream/basic_webpage.html">Basic Webpage (HTML)</a></li>
+            <li><a href="my_class_stream/index.html">Basic Webpage (HTML)</a></li>
             <li><a href="favorite_things">My Favorite Things</a></li>
             <li><a href="multipage_website">My Genius: Volleyball</a></li>
             <li><a href="fonts_matter/fonts.html">Adobe Fonts Practice</a></li>
