--- a/index.html
+++ b/index.html
@@ -24,8 +24,10 @@
             <img src="homepage/images/bio-page-picture.jpg" width="500px">
         </div> 
     
-        <h2 class="center">Github Repository</h2>
-        <a href="https://github.com/nbhutani2009/webdesign1" class="center">Link To Github Repository</a>
+        <h2>Github Repository</h2>
+        <a href="https://github.com/nbhutani2009/webdesign1" class="center">Link To My Github Repository</a>
+        |
+        <a href="https://nbhutani2009.github.io/webdesign1/">Public Github Repository</a>
     
 </body>
 
