pushing first page of css grid demo

--- a/css_grid/index.html
+++ b/css_grid/index.html
@@ -16,12 +16,36 @@
         </div>
 
         <div class="grid-item main-image">
-            <img src="" alt="super awesome main image">
+            <img src="images/eps-image.jpg" width="500px" alt="an image of eastside preparatory school">
         </div>
 
-        <div class="grid-item main1">Main content 1</div>
-        <div class="grid-item main2">Main content 2</div>
-        <div class="grid-item sidenav">Side Nav</div>
+        <div class="grid-item main1">
+            <h2>Weekly News Announcements!</h2>
+            <p>This may just be the most exciting week in EPS history!</p>
+            <p style="font-size: smaller">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </div>
+        <div class="grid-item main2">
+            <h2>Upcoming Assignments: Web Design 1</h2>
+            <p>Keep an eye out for your CSS Grid assignments coming up this week:</p>
+            <ol>
+                <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit,</li>
+                <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit,</li>
+                <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit,</li>
+                <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit,</li>
+            </ol>
+        </div>
+        <div class="grid-item main3">
+            <h2>Interview with an EPS Web Student!</h2>
+            <p>We interviewed Billy from the 9th Grade today!</p>
+            <p style="font-size: smaller">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </div>
+        <div class="grid-item sidenav">
+            <ul>
+                <li><a href="https://eastsideprep.instructure.com/">Canvas Page</a></li>
+                <li><a href="https://www.epschedule.com/">EPSchedule Page</a></li>
+                <li><a href="https://www.eastsideprep.org/">Eastside Prep Main Website</a></li>
+            </ul>
+        </div>
 
 
     </div>
