--- a/css_grid/index.html
+++ b/css_grid/index.html
@@ -11,7 +11,7 @@
         <div class="grid-item navmenu">
             <ul class="nav">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="second.html">Second</a></li>
+                <li><a href="second.html">My Favorite Marvel Movies</a></li>
             </ul>
         </div>
 
