css grid homework

--- a/css_grid/second.html
+++ b/css_grid/second.html
@@ -15,14 +15,13 @@
             </ul>
         </div>
 
-        <div class="grid-container firstthing" style="text-align: center;">
+        <div class="grid-thing firstthing" style="text-align: center;">
             <h2>Welcome to My Favorite Marvel Movies!</h2>
         </div>
 
-        <div class="row-of-movies">
         <div class="grid-thing firstmovie">
             <img src="images/iron-man-image.jpg" width="200px">
-            <p class="p-font">Such an iconic start to an iconic franchise and one of the best superheroes and characters ever. And, yes, I was sad when he died.</p>
+            <p class="p-font">An iconic start to an iconic franchise and an iconic character. Tony Stark was amazing. And yes I was sad when he died.</p>
         </div>
 
         <div class="grid-thing secondmovie">
