--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <li><a href="favorite_things">My Favorite Things</a></li>
             <li><a href="multipage_website">My Genius: Volleyball</a></li>
             <li><a href="fonts_matter/fonts.html">Adobe Fonts Practice</a></li>
+            <li><a href="css_grid/index.html"></a>CSS Grid Practice</li>
         </ul>
 
         <h1 class="center">Intro</h1>
