pushing the content bar

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <li><a href="multipage_website">My Genius: Volleyball</a></li>
             <li><a href="fonts_matter/fonts.html">Adobe Fonts Practice</a></li>
             <li><a href="css_grid/index.html"></a>CSS Grid Practice</li>
+            <li><a href="MA-group-sports/index.html">MA Group Project</a></li>
         </ul>
 
         <h1 class="center">Intro</h1>
