--- a/MA-group-sports/index.html
+++ b/MA-group-sports/index.html
@@ -7,6 +7,16 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="my_class_stream/index.html">Basic Webpage (HTML)</a></li>
+            <li><a href="favorite_things">My Favorite Things</a></li>
+            <li><a href="multipage_website">My Genius: Volleyball</a></li>
+            <li><a href="fonts_matter/fonts.html">Adobe Fonts Practice</a></li>
+            <li><a href="MA-group-sports/index.html">MA Group Project</a></li>
+        </ul>
+
     
 </body>
 </html>
