pushing nav bar

--- a/MA-group-sports/index.html
+++ b/MA-group-sports/index.html
@@ -10,11 +10,11 @@
 
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="my_class_stream/index.html">Basic Webpage (HTML)</a></li>
-            <li><a href="favorite_things">My Favorite Things</a></li>
-            <li><a href="multipage_website">My Genius: Volleyball</a></li>
-            <li><a href="fonts_matter/fonts.html">Adobe Fonts Practice</a></li>
-            <li><a href="MA-group-sports/index.html">MA Group Project</a></li>
+            <li><a href="basketball.html">Basketball</a></li>
+            <li><a href="soccer.html">Soccer</a></li>
+            <li><a href="ult.html">Ultimate</a></li>
+            <li><a href="volleyball.html">Volleyball</a></li>
+            <li><a href="contact.html">Contact</a></li>
         </ul>
 
     
