index page almost done

--- a/MA-group-sports/index.html
+++ b/MA-group-sports/index.html
@@ -6,13 +6,14 @@
     <title>MA Sports Project | Sabina, Zara, Nehmat</title>
     <link rel="stylesheet" href="css/style.css">
     <style>
+
         body {
             font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             text-align: center;
         }
 
         .welcome-paragraph {
-            grid-row: 1;
+            grid-row: 2;
             grid-column: 1 / span 3;
         }
 
@@ -25,13 +26,23 @@
         .grid-item {
         background-color: rgb(141, 182, 219);
         text-align: center;
-        font-size: 30px;
+        font-size: 20px;
         padding: 20px;
         }
 
         .nav-menu {
             grid-row: 1;
             grid-column: 1 / span 3;
+        }
+
+        .main-image {
+            grid-row: 3;
+            grid-column: 1 / span 2;
+        }
+
+        .announcements {
+            grid-row: 3;
+            grid-column: 3 / span 1;
         }
     </style>
 </head>
@@ -49,11 +60,31 @@
             </ul>
         </div>
 
-            <div class=" grid-item welcome-paragraph">
+            <div class="grid-item welcome-paragraph">
                 <h1>Welcome!</h1>
-                <p>Hello there everyone! Welcome to our website! On this website, our goal is to give information to our fellow EPS athletes about sports outside of school and places where they can further the talents that they nourish here! We have information about club tryouts, logistics and other opporunities!</p>
+                <p>Hello there everyone! Welcome to our website! On this website, our goal is to give information to our fellow EPS athletes about sports outside of school and places where they can further the talents that they nourish here! We have information about club tryouts, logistics and other opportunities!</p>
             </div>
-        </div>
+
+            <div class="grid-item main-image">
+                <iframe width="516" height="315" src="https://www.youtube.com/embed/MlyZbsmVnj4?si=aEXDgWRHMfab8VOx" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            </div>
+
+            <div class="grid-item announcements">
+                <h2>Announcements!</h2>
+                <ul style="font-size: 20px">
+                    <li>Basketball Signups Open Now!</li>
+                    <li>Senior Night for Volleyball: 10/18!</li>
+                    <li>Boys Golf Season Record - 7-1!</li>
+                    <li>Yearbook Cover Contest: Open!</li>
+                    <li>Friendly Boys Ultimate Game vs. Mercer: 10/19</li>
+                    <li>Jacob and Rishay (Rowing) Headed to Nattys!</li>
+                </ul>
+            </div>
+
+            <div class="grid-item purpose">
+                
+            </div>
+    </div>
 
 
     
