--- a/MA-group-sports/index.html
+++ b/MA-group-sports/index.html
@@ -44,7 +44,18 @@
             grid-row: 3;
             grid-column: 3 / span 1;
         }
+
+        .purpose {
+            grid-row: 4;
+            grid-column: 1 / span 1;
+        }
+
+        .important {
+            grid-row: 4;
+            grid-column: 2 / span 2;
+        }
     </style>
+
 </head>
 <body>
 
@@ -82,7 +93,18 @@
             </div>
 
             <div class="grid-item purpose">
-                
+                <h2>Purpose</h2>
+                <p>The purpose of this website is to give our EPS athletes a way to take the sports that they play on campus and take them to places outside of campus. It's a way for our athletes to grow their skills by participating in club sports or learning about others. We wanted to create this site as an accessible place where our EPS athletes can get all the information they need in one spot.</p>
+            </div>
+
+            <div class="grid-item important">
+                <h2>Off-Campus: Important Details</h2>
+                <p>Check the individual pages for more information!</p>
+                <ol>
+                    <li>Club Basketball Season is Starting!</li>
+                    <li>Ultimate Tryouts (Washington) Happening Soon!</li>
+                    <li>Volleyball 14U and Under Tryouts Late October!</li>
+                </ol>
             </div>
     </div>
 
