--- a/MA-group-sports/index.html
+++ b/MA-group-sports/index.html
@@ -108,6 +108,10 @@
             </div>
     </div>
 
+    <div class="footer">
+        Created by &copy; Nehmat, Sabina,Zara Web Design SportsPage
+    </div>
+
 
     
 </body>
