--- a/MA-group-sports/ult.html
+++ b/MA-group-sports/ult.html
@@ -4,16 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS Grid</title>
-    <link rel="stylesheet" href="style/style.css">
+   <link rel="stylesheet" href="css/style.css">
+   <div class="grid-container">
 </head>
 <body>
-    <div class="grid-container">
-        <div class="grid-item navmenu">
-            <ul class="nav">
-                <li><a href="index.html">Home</a></li>
-                    <li><a href="second.html">Second</a></li>
-            </ul>
-        </div>
+    <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="basketball.html">Basketball</a></li>
+        <li><a href="soccer.html">Soccer</a></li>
+        <li><a href="ult.html">Ultimate</a></li>
+        <li><a href="volleyball.html">Volleyball</a></li>
+        <li><a href="contact.html">Contact</a></li>
+    </ul>
        <div class="grid-item main-image">
         <img src="" alt="super awesome main image">
        </div>
@@ -26,3 +28,4 @@
          </div>
 </body>
 </html>
+</div>
