--- a/MA-group-sports/volleyball.html
+++ b/MA-group-sports/volleyball.html
@@ -17,7 +17,18 @@
         font-size: 20px;
         padding: 20px;
         }
-        .
+        .maina{
+            grid-row:3;
+            grid-column:1;
+        }
+        .mainb{
+            grid-row:3;
+            grid-column:2;
+        }
+        .mainc{
+            grid-row:4;
+            grid-column:1 / span 2;
+        }
     </style>
 </head>
 <body>
@@ -33,16 +44,45 @@
 <div class="grid-item welcome-paragraph">
     <h1>Volleyball Information!</h1>
 </div>
-    <div class="grid-item main1">
-    <img src="images/epsvolley.png" alt="super awesome main image" width="700"height="600">
+    <div class="grid-item maina">
     <h3>Interested in volleyball? Heres all the information you need!</h3>
     <p>Here is what you need to know:</p>
+    <ul style="font-size:20px">
+        <li>U14 and under tryouts:</li>
+    <ul>
+        <li>Sudden Impact-tbd</li>
+    </ul>
+     <ul>
+        <li>Northwest Juniors-tbd</li>
+     </ul>  
+    <ul>
+        <li>U15 and above tryouts:</li>
+    </ul>
+    <ul>
+        <li>These tryouts have already happened but make sure to keep an eye out this summer because tryouts will open again!</li>
+    </ul>
+
+
     
 
 </div>        
-<div class="grid-item main2">Interview</div>    
-<div class="grid-item sidenav">Side Nav</div>    
-         </div>
+<div class="grid-item mainb">
+    <img src="images/epsvolley.png" alt="super awesome main image" width="700"height="600">
+
+</div> 
+<div class="grid-item mainc">
+    Interview
+</div>   
+<div class="grid-item sidenav">
+    <h2>Side Nav</h2>
+    <h4>Extra Reasources:</h4>
+    <ul>
+        <li><a href="https://www.sivbc.org/" target="_blank">Sudden Impact Website!</a></li>
+        <li><a href="https://www.nwjuniors.org/" target="_blank">Northwest Juniors Website!</a></li>
+    </ul>
+
+</div>    
+</div>
          <div class="footer">
             Created by &copy; Ahmed and WebDesign Class Fall 2023
          </div>
