saving and pushing

--- a/MA-group-sports/index.html
+++ b/MA-group-sports/index.html
@@ -54,6 +54,11 @@
             grid-row: 4;
             grid-column: 2 / span 2;
         }
+
+        .picture {
+            grid-row: 5;
+            grid-column:1 / span 3;
+        }
     </style>
 
 </head>
@@ -105,6 +110,10 @@
                     <li>Ultimate Tryouts (Washington) Happening Soon!</li>
                     <li>Volleyball 14U and Under Tryouts Late October!</li>
                 </ol>
+            </div>
+
+            <div class="grid-item picture">
+                <img src="images/sports-stuff.jpg" width="350px" alt="A bereal from the volleyball open gyms!">
             </div>
     </div>
 
