ultimate page changes

--- a/MA-group-sports/soccer.html
+++ b/MA-group-sports/soccer.html
@@ -3,13 +3,59 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>CSS Grid</title>
+   <link rel="stylesheet" href="css/style.css">
+   <div class="grid-container">
 </head>
 <body>
-    <h1>Soccer</h1>
+    <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="basketball.html">Basketball</a></li>
+        <li><a href="soccer.html">Soccer</a></li>
+        <li><a href="ult.html">Ultimate</a></li>
+        <li><a href="volleyball.html">Volleyball</a></li>
+        <li><a href="contact.html">Contact</a></li>
+    </ul>
+       <div class="grid-item main-image">
+        <h1>☆ Soccer Tryouts!! ☆</h1>
+       </div>
+<div class="grid-item main1" style="text-align: center;">
+<img src="images/boys-ultimate-pic.png" style=" text-align: center;">
+<b><p style="text-align: center; color: rgb(68, 61, 102);">Want to try out soccer? Heres what you need to know!</p></b>
+<p style="font-size: smaller; color: rgb(25, 7, 89);"> If your wanting to play socce:</p>
+<ul style="text-align: center; font-size: smaller;">
+    <li>Tryouts begin in November for 9-10th Graders.</li>
+    <li>Nationals and other bigger tournaments take place in spring.</li>
+    <li>Most ultimate clubs range from having 22-24 players per team.</li>
+    <li>Ultimate Clubs have 2 seasons: December - Late March, and June - Late August.</li>
+    <a href="https://www.sevenhillsultimateclub.com/"><li>For more details visit  7 Hills Ultimate for extra info!</li></a>
+</ul>
+</div>        
+    
+<div class="grid-item sidenav" style="text-align: center;">
+    <b><p style="text-align: center; color: rgb(68, 61, 102);">Tryout Info!!</p></b>
+    <img src="images/tryout-sched.webp" style="text-align: center; height: 200px; width: 280px;">
+    <p style="font-size: small; color: rgb(25, 7, 89);"> The table above shows the entire tryout schedule for an Ultimate club called 7 hills</p>
+    <p style="font-size: small; color: rgb(25, 7, 89);"> Here are some major dates to take note of:</p>
+    <ul style="font-size: smaller;">
+     <b><li>9th-10th Tryout Dates: 11:00 AM - 1:00 PM</li></b>
+     <li>November 5th</li>
+     <li>November 12th</li>
+     <li>November 19th (11:30-1:30) </li>
+     <b><li>11th-12th Tryout Dates: 1:00 PM - 3:00 PM</li></b>
+     <li>November 5th</li>
+     <li>November 12th</li>
+     <li>November 19th (1:30-3:30)</li>
+     <a href="https://www.sevenhillsultimateclub.com/"><li>For more details visit  7 Hills Ultimate for extra info!</li></a>
+    </ul>
+    <div class="grid-item main2" style="text-align: center;">
+        reallllll 
+    </div>   
+</div>    
+         </div>
+         <div class="footer">
+            Created by &copy; Ahmed and WebDesign Class Fall 2023
+         </div>
 </body>
 </html>
-
-<ul>
-<li></li>    
-</ul>
+</div>
