--- a/MA-group-sports/ult.html
+++ b/MA-group-sports/ult.html
@@ -49,7 +49,7 @@
      <a href="https://www.sevenhillsultimateclub.com/"><li>For more details visit  7 Hills Ultimate for extra info!</li></a>
     </ul>
     <div class="grid-item main2" style="text-align: center;">
-<img src="images/7-hills-img.webp" style="text-align: center; width: 400px; height: 300px;"> 
+        reallllll 
     </div>   
 </div>    
          </div>
