--- a/MA-group-sports/volleyball.html
+++ b/MA-group-sports/volleyball.html
@@ -11,6 +11,19 @@
         grid-row: 2;
         grid-column: 1 / span 3;
         }
+        .maina {
+      grid-row:3;
+      grid-column:1;
+  }
+  .mainb {
+      grid-row:3;
+      grid-column:2;
+  }
+  .mainc {
+      grid-row:4;
+      grid-column:1 / span 2;
+  }
+
     </style>
 </head>
 <body>
