--- a/MA-group-sports/volleyball.html
+++ b/MA-group-sports/volleyball.html
@@ -79,7 +79,7 @@
 </div>    
 </div>
          <div class="footer">
-            Created by &copy; Ahmed and WebDesign Class Fall 2023
+            Created by &copy; Nehmat, Sabina, Zara WebDesign Class Fall 2023
          </div>
 </body>
 </html>
