--- a/MA-group-sports/basketball.html
+++ b/MA-group-sports/basketball.html
@@ -11,6 +11,19 @@
         grid-row: 2;
         grid-column: 1 / span 3;
         }
+        .maina {
+      grid-row:3;
+      grid-column:1;
+  }
+  .mainb {
+      grid-row:3;
+      grid-column:2;
+  }
+  .mainc {
+      grid-row:4;
+      grid-column:1 / span 2;
+  }
+
     </style>
 </head>
 <body>
@@ -24,23 +37,18 @@
     </ul>
         
 <div class="grid-item welcome-paragraph">
-    <h1>Volleyball Information!</h1>
+    <h1>Basketball Information!</h1>
 </div>
     <div class="grid-item maina">
-    <h3>Interested in volleyball? Heres all the information you need!</h3>
+    <h3>Interested in Basketball? Heres all the information you need!</h3>
     <p>Here is what you need to know:</p>
-    <ul style="font-size:20px">
+    <ul style="font-size:25px">
         <li>U14 and under tryouts:</li>
-    <ul>
-        <li>Sudden Impact-tbd</li>
-    </ul>
-     <ul>
+        <li>Eastside basketball tryouts-August 19th/20th</li>
         <li>Northwest Juniors-tbd</li>
-     </ul>  
-    <ul>
-        <li>U15 and above tryouts:</li>
     </ul>
-    <ul>
+    <ul style="font-size:25 px">
+        <li>U15 and above tryouts:</li>
         <li>These tryouts have already happened but make sure to keep an eye out this summer because tryouts will open again!</li>
     </ul>
 
@@ -73,6 +81,5 @@
 </div>
 
    
-
 
 
