--- a/MA-group-sports/ult.html
+++ b/MA-group-sports/ult.html
@@ -48,10 +48,11 @@
      <li>November 19th (1:30-3:30)</li>
      <a href="https://www.sevenhillsultimateclub.com/"><li>For more details visit  7 Hills Ultimate for extra info!</li></a>
     </ul>
+</div>
+
     <div class="grid-item main2" style="text-align: center;">
-        reallllll 
-    </div>   
-</div>    
+   <img src="images/7-hills-img.webp" style="text-align: ;">
+    </div>       
          </div>
          <div class="footer">
             Created by &copy; Ahmed and WebDesign Class Fall 2023
